# music-sorter

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  app.py  audio_classification_eda.ipynb  config.py  config.yaml  feature_extraction.py  main.py  music_library.db  prepare_eda_data.py  pyproject.toml  run_eda_preparation.bat  test_scan_improved.py
.claude/: settings.local.json
.todo/: config.yaml  tasks.yaml  ttdo-llm.txt
api/: __init__.py  routes.py  search_routes.py  websocket.py
database/: __init__.py  db.py  models.py
eda_results/: autoencoder.pth  cluster_statistics.csv  feature_importance.csv  features_with_clusters.csv
modules/: __init__.py  audio_analysis.py  classifier.py  deduplicator.py  indexer.py  metadata.py  migrator.py
static/: app.js  index.html  library.css  library.html  library.js  style.css
utils/: __init__.py  hashing.py  io_optimizer.py  logger.py
